src/modal/styles/gb--pl.css
@media (min-width: 750px) and (min-height: 540px) {
    h1 {
        color: white;
        font-size: 30px;
        font-weight: 600;
        letter-spacing: 0.8px;
        line-height: 44px;
        padding-left: 20px;
        margin: 0px;
    }

    h2 {
        font-family: 'PayPalSansBig';
        font-size: 24px;
        letter-spacing: 0.8px;
        margin-top: 10px;
        margin-bottom: 20px;
    }

    .subheadline {
        padding-left: 20px;
        color: white;
        font-family: 'PayPalSansBig';
        font-size: 14px;
        letter-spacing: 0.25px;
    }
    .modal__content-background {
        max-width: 750px;
        min-height: auto;
        position: relative;
        background-color: #0070ba;
        overflow: hidden;
        -webkit-box-shadow: 0px 10px 14px 1px rgba(0, 0, 0, 0.6);
        -moz-box-shadow: 0px 10px 14px 1px rgba(0, 0, 0, 0.6);
        box-shadow: 0px 10px 14px 1px rgba(0, 0, 0, 0.6);
    }

    .modal__content-wrapper {
        position: absolute;
        display: flex;
        justify-content: center;
        align-items: center;
    }
    .modal__content {
        padding-top: 75px;
    }
    .modal__header {
        max-width: 800px;
    }
    .modal__header {
        background-color: transparent;
        position: absolute;
        z-index: 999;
    }

    .modal__header::after {
        display: none;
    }

    .header__logo {
        display: flex;
        width: auto;
        padding-left: 20px;
    }

    .header__logo img:first-child {
        height: 35px;
        margin-right: 9px;
    }

    .header__logo img:last-child {
        height: 28px;
        width: 98px;
        margin-top: 5px;
    }
    .content-body__terms {
        padding-left: 15px;
    }
    .content-body__terms p:first-child {
        line-height: 18px;
        letter-spacing: 0.5px;
        color: white;
        font-family: 'PayPalSansBig';
        font-size: 13px;
    }
    .placeholderSpace {
        height: 250px;
    }

    .header__close {
        top: 5px;
        right: 5px;
    }

    .header__close svg {
        height: 60px;
        width: 60px;
    }

    .modal__main {
        display: flex;
    }
    .modal__main::after {
        content: '';
        background-color: #0070ba;
        width: 67%;
        height: 850px;
        border-bottom-right-radius: 100%;
        border-top-right-radius: 100%;
        position: absolute;
        top: -225px;
        left: 0;
    }
    .container-left {
        flex-grow: 1;
        z-index: 9;
    }
    .container-right {
        width: 34%;
    }

    .modal__content-background::after {
        content: '';
        width: 45%;
        height: 100%;
        position: absolute;
        top: 0;
        right: 0;
        background-color: white;
    }

    .container-right-content {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .container-right-content > p {
        font-size: 15px;
        line-height: 23px;
        text-align: center;
        margin-top: 6px;
    }

    .container-right-content > p:last-child > span {
        font-weight: 600;
        font-style: italic;
    }

    .thumbs-up {
        position: absolute;
        transform: translate(0px, -30px);
    }

    .checkmark {
        margin-top: 22px;
    }

    .pp-button {
        margin-top: 30px;
    }

    .icecream {
        display: none;
    }

    .mobile-break {
        display: none;
    }

    .modal__wrapper {
        opacity: 0;
        transform: translateY(5%);
        transition: transform 350ms ease, opacity 250ms ease;
    }

    .modal__container--show .modal__wrapper {
        opacity: 1;
        transform: translateY(0%);
        transition: transform 350ms ease, opacity 250ms ease;
    }
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
    .modal__content-wrapper {
        justify-content: flex-start;
    }
}

@media (max-width: 749px) and (orientation: landscape), (max-height: 539px) and (orientation: landscape) {
    .modal__main::after {
        width: 1200px !important;
    }
}

@media (max-width: 749px), (max-height: 539px) {
    h1 {
        color: white;
        font-size: 24px;
        font-weight: 600;
        letter-spacing: 0.8px;
        line-height: 36px;
        text-align: center;
        margin-top: 22px;
        margin-bottom: 0px;
    }

    h2 {
        display: none;
    }

    .modal__overlay-side.left,
    .modal__overlay-side.right {
        width: calc((100% - 612px) / 2) !important;
    }

    .modal__header::after {
        display: none;
    }

    .modal__header {
        background-color: transparent;
    }

    .header__logo {
        display: flex;
        width: auto;
        align-items: center;
        justify-content: center;
    }

    .header__logo > img:first-child {
        width: 25px;
        margin-right: 9px;
        transform: translateY(-1px);
    }

    .header__logo > img:last-child {
        width: 84px;
    }

    .header__close {
        transform: translate(-2px, -6px);
    }

    .header__close > svg {
        height: 55px;
        width: 55px;
    }

    .header__close > svg > path {
        stroke: white;
    }

    .modal__content-background {
        -webkit-box-shadow: 1px 21px 34px 2px rgba(0, 0, 0, 0.56);
        -moz-box-shadow: 1px 21px 34px 2px rgba(0, 0, 0, 0.56);
        box-shadow: 1px 21px 34px 2px rgba(0, 0, 0, 0.56);
    }

    .modal__content {
        min-height: calc(100vh - 84px);
    }

    .modal__main {
        display: flex;
        flex-direction: column;
        align-items: center;
        padding-bottom: 100px;
        min-height: calc(100vh - 184px);
    }

    .modal__main::after {
        content: '';
        background-color: #0070ba;
        width: 900px;
        height: 500px;
        border-radius: 0 0 100% 100%;
        display: block;
        order: 1;
        margin-top: -280px;
    }

    .container-left {
        z-index: 9;
        order: 2;
        margin-top: -250px;
    }

    .headline-container {
        white-space: nowrap;
    }

    .subheadline {
        font-family: 'PayPalSansBig';
        color: white;
        text-align: center;
        letter-spacing: 0.25px;
    }

    .container-right {
        order: 3;
        margin-top: 40px;
        text-align: center;
    }

    .container-right-content > p {
        font-size: 15px;
        margin-top: 9px;
    }

    .container-right-content > p:last-child > span {
        font-weight: 600;
        font-style: italic;
    }

    .thumbs-up {
        display: none;
    }

    .checkmark {
        margin-top: 35px;
    }

    .pp-button {
        margin-top: 36px;
    }

    .icecream {
        margin-top: 32px;
    }

    .content-body__terms > p {
        color: #6c7378;
    }

    .content-body__terms {
        position: absolute;
        bottom: 10px;
        left: 0;
        width: 100%;
        display: flex;
        justify-content: center;
        border-top: 1px dashed #bd10e0;
    }

    .desktop-break {
        display: none;
    }
}

/* iPhone 5/SE media query */
@media (max-width: 350px) {
    h1 {
        font-size: 20px;
        line-height: 32px;
    }

    .content-body__terms > p {
        font-size: 12px;
    }

    .icecream {
        margin-top: 40px;
    }

    .modal__main::after {
        width: 800px;
    }
}

